alteracoes nos controllers, models e swagger
